--- a/main.html
+++ b/main.html
@@ -7,7 +7,18 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<form>
+  <p>What is the captial of India?</p>
+
+  <input type="radio" id="New_Delhi" name="Capital" value="New Delhi">
+  <label for="New_Delhi">New Delhi</label><br>
+
+  <input type="radio" id="Mumbai" name="Capital" value="Mumbai">
+  <label for="Mumbai">Mumbai</label><br>
+
+  <input type="submit" value="Submit">
+</form>
+	<blockquote cite="https://course.acciojob.com/journey"> New Delhi is the capital of India and an administrative district of NCT Delhi</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
