--- a/main.html
+++ b/main.html
@@ -17,9 +17,11 @@
   <label for="Mumbai">Mumbai</label><br>
 
   <input type="submit" value="Submit">
-</form>
-	<blockquote cite="https://course.acciojob.com/journey"> New Delhi is the capital of India and an administrative district of NCT Delhi</blockquote>
-    <script type="text/javascript" src="./script.js">
+
+	<blockquote cite="https://www.wikipedia.org/"> New Delhi is the capital of India and an administrative district of NCT Delhi
+	</blockquote>
+    </form>
+		<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
