--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<form>
-  <p>What is the captial of India?</p>
+  <p><b>What is the captial of India?</b></p>
 
   <input type="radio" id="New_Delhi" name="Capital" value="New Delhi">
   <label for="New_Delhi">New Delhi</label><br>
@@ -18,7 +18,10 @@
 
   <input type="submit" value="Submit">
 
-	<blockquote cite="https://www.wikipedia.org/"> New Delhi is the capital of India and an administrative district of NCT Delhi
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi"> New Delhi is the capital of India and an administrative district of NCT Delhi
+	<footer>New Delhi,
+	<a href="https://en.wikipedia.org/wiki/New_Delhi" target="_blank">Wikipedia</a>
+	</footer>
 	</blockquote>
     </form>
 		<script type="text/javascript" src="./script.js">
